[MCOMPILER-304] Introduce plexus-language component
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-compiler-plugin@1804935 13f79535-47bb-0310-9956-ffa450edef68